--- a/main.html
+++ b/main.html
@@ -62,6 +62,11 @@
         <div class="can-mobile">
             <img src="img/index-can-mobile 1.png" alt="">
         </div>
+
+         <div class="mobile-button">
+            <button class="button-under">ПОДОБРАТЬ ПРОГРАММУ</button>
+        </div>
+
     </div>
 
 
